--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -29,44 +29,32 @@
       height: inherit;
       text-align: center;
       float: right; }
-      .header .headerContainer .rightContent #registerLoginLink, .header .headerContainer .rightContent #newContentPostLink, .header .headerContainer .rightContent #contentCreatorsLink {
+      .header .headerContainer .rightContent #registerLoginLink, .header .headerContainer .rightContent #newContentPostLink, .header .headerContainer .rightContent #contentCreatorsLink, .header .headerContainer .rightContent #userDropdown {
         display: inline-block;
         padding: 0 25px; }
-        .header .headerContainer .rightContent #registerLoginLink span, .header .headerContainer .rightContent #newContentPostLink span, .header .headerContainer .rightContent #contentCreatorsLink span {
+        .header .headerContainer .rightContent #registerLoginLink span, .header .headerContainer .rightContent #newContentPostLink span, .header .headerContainer .rightContent #contentCreatorsLink span, .header .headerContainer .rightContent #userDropdown span {
           cursor: pointer; }
       .header .headerContainer .rightContent #profileDropdown {
         display: inline-block;
         background: none;
         border: none;
         position: relative; }
-        .header .headerContainer .rightContent #profileDropdown .dropdown.open.btn-group Button {
-          color: #bfbfbf;
-          background: none;
-          border: none;
-          box-shadow: none; }
-        .header .headerContainer .rightContent #profileDropdown Button {
-          padding-top: 15px;
-          font-size: 1.75rem;
-          color: #ffffff;
-          height: 4vh;
-          background: none;
-          border: none; }
-          .header .headerContainer .rightContent #profileDropdown Button img {
+        .header .headerContainer .rightContent #profileDropdown #userDropdown {
+          display: inline-block;
+          background: none; }
+          .header .headerContainer .rightContent #profileDropdown #userDropdown img {
             height: 35px;
             border-radius: 50%;
             margin-right: 8px; }
         .header .headerContainer .rightContent #profileDropdown ul {
           background-color: #216894;
-          margin-top: 25px;
-          text-align: center; }
-          .header .headerContainer .rightContent #profileDropdown ul span {
-            color: #ffffff;
-            cursor: pointer; }
-            .header .headerContainer .rightContent #profileDropdown ul span a {
-              display: block;
-              color: #ffffff; }
-            .header .headerContainer .rightContent #profileDropdown ul span a:hover {
-              background-color: #cc8800; }
+          text-align: center;
+          cursor: pointer; }
+          .header .headerContainer .rightContent #profileDropdown ul a {
+            display: block;
+            color: #f2f2f2; }
+          .header .headerContainer .rightContent #profileDropdown ul a:hover {
+            background-color: #cc8800; }
 
 .footerContainer {
   padding-top: 6px;
@@ -483,15 +471,15 @@
           .creatorListContainer .contentPostContainer .singleContentPost #postOtherDetails #socialIcons img {
             height: 22px; }
     .creatorListContainer .contentPostContainer .singleContentPost:hover {
-      background: #7abcff;
+      background: #becbe2;
       /* Old browsers */
-      background: -moz-linear-gradient(top, #7abcff 0%, #60afff 0%, #54a9ff 87%);
+      background: -moz-linear-gradient(top, #becbe2 0%, #7890bc 60%);
       /* FF3.6-15 */
-      background: -webkit-linear-gradient(top, #7abcff 0%, #60afff 0%, #54a9ff 87%);
+      background: -webkit-linear-gradient(top, #becbe2 0%, #7890bc 60%);
       /* Chrome10-25,Safari5.1-6 */
-      background: linear-gradient(to bottom, #7abcff 0%, #60afff 0%, #54a9ff 87%);
+      background: linear-gradient(to bottom, #becbe2 0%, #7890bc 60%);
       /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7abcff', endColorstr='#54a9ff', GradientType=0);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#becbe2', endColorstr='#7890bc',GradientType=0 );
       /* IE6-9 */ }
 
 .profileContainer {
